# json_cpp_serialization

./: .clang-format  CMakeLists.txt  README.md  main.cpp  test.json
developer/: CMakeLists.txt  README.md  developer.cpp  developer.hpp  pluginsDeveloper.cpp  pluginsDeveloper.h
include/: abstract.h  structure.h
pluginsUser/: CMakeLists.txt  pluginsUser.cpp  pluginsUser.hpp
